fixed overflow bug

--- a/style.css
+++ b/style.css
@@ -170,7 +170,7 @@ h1 {
   padding: 5px;
 }
 
-@@keyframes leftToZero {
+/*@@keyframes leftToZero {
   from {transform: translate(0); opacity: 1}
   to {transform: translate(100px); opacity: 0}
 }
@@ -185,7 +185,7 @@ h1 {
 @@keyframes rightToOne {
   from {transform: translate(100px); opacity: 0}
   to {transform: translate(0); opacity: 1}
-}
+}*/
 /*.fancybox-pic-hidden {
   display: none;
 }*/
@@ -430,7 +430,7 @@ h3{
   position: relative;
   width: 100%;
   height: calc(100vh + 10px);
-  overflow: hidden;
+  /*overflow: hidden;*/
 }
 .dna > img {
   position: absolute;
@@ -444,7 +444,7 @@ h3{
 .dna-mini {
   background: url("images/sec-03-dna-mini.png") no-repeat left top;
   position: absolute;
-  left: 60px;
+  left: 30px;
   top: 320px;
   width: 109px;
   height: 0px;
@@ -465,47 +465,49 @@ h3{
 .active h1 {
   font-size: 48px;
   color: white;
+  opacity: 0;
 }
 .active p {
   font-size: 20px;
   color: white;
+  opacity: 0;
 }
 
-.active.firsth1 {
+.firsth1 {
   position: absolute;
   top: 400px;
-  left: 60px;
+  left: 30px;
   width: 800px;
   opacity: 1;
 }
-.active.secondh1 {
+.secondh1 {
   position: absolute;
-  top: 250px;
-  left: 1800px;
+  top: 240px;
+  left: 450px;
   width: 400px;
 }
 .firstp {
   position: absolute;
-  top: 350px;
-  left: 450px;
+  top: 325px;
+  left: 500px;
   width: 600px;
 }
 .secondp {
   position: absolute;
-  top: 400px;
+  top: 380px;
   left: 550px;
   width: 600px;
 }
 .thirdp {
   position: absolute;
-  top: 450px;
+  top: 440px;
   left: 550px;
   width: 600px;
 }
 .forthp {
   position: absolute;
-  top: 550px;
-  left: 450px;
+  top: 500px;
+  left: 500px;
   width: 600px;
 }
 
@@ -525,22 +527,22 @@ h3{
 
 .dna-thumbnail1 h1 {
   position: absolute;
-  top: 400px;
-  left: 60px;
+  top: 200px;
+  left: 500px;
   opacity: 0;
 }
 .thumb1p1 {
   position: absolute;
-  top: 500px;
-  left: 60px;
+  top: 300px;
+  left: 500px;
   opacity: 0;
   font-size: 20px;
   line-height: 1.5em;
 }
 .thumb1p2 {
   position: absolute;
-  top: 600px;
-  left: 60px;
+  top: 400px;
+  left: -480px;
   opacity: 0;
   font-size: 20px;
   line-height: 1.5em;
@@ -552,7 +554,7 @@ h3{
   top: 5164px;
   height: 100vh;
   width: 100%;
-  overflow-x: hidden;
+  overflow: hidden;
 }
 .dna-thumbnail2 h1 {
   position: absolute;
@@ -561,7 +563,7 @@ h3{
 }
 .thumb2p1 {
   position: absolute;
-  top: 400px;
+  top: 800px;
   left: 60px;
   opacity: 0;
   font-size: 20px;
@@ -569,7 +571,7 @@ h3{
 }
 .thumb2p2 {
   position: absolute;
-  top: 500px;
+  top: 800px;
   left: 60px;
   opacity: 0;
   font-size: 20px;
@@ -596,7 +598,31 @@ h3{
   top: 7000px;
   height: 100%;
   width: 100%;
+  color: white;
+  overflow: hidden;
   /*display: block;*/
+}
+.technologies h1 {
+  position: absolute;
+  top: 200px;
+  left: 400px;
+  opacity: 0;
+}
+.techp1 {
+  position: absolute;
+  top: 280px;
+  left: 400px;
+  opacity: 0;
+  font-size: 20px;
+  line-height: 1.5em;
+}
+.techp2 {
+  position: absolute;
+  top: 400px;
+  left: -480px;
+  opacity: 0;
+  font-size: 20px;
+  line-height: 1.5em;
 }
 
 .smoothness {
@@ -607,6 +633,27 @@ h3{
   height: 100vh;
   width: 100%;
   /*overflow-x: hidden;*/
+}
+.smoothness h1 {
+  position: absolute;
+  top: 800px;
+  left: 60px;
+}
+.smoothp1 {
+  position: absolute;
+  top: 800px;
+  left: 60px;
+  opacity: 0;
+  font-size: 20px;
+  line-height: 1.5em;
+}
+.smoothp2 {
+  position: absolute;
+  top: 800px;
+  left: 60px;
+  opacity: 0;
+  font-size: 20px;
+  line-height: 1.5em;
 }
 
 
@@ -666,6 +713,7 @@ h3{
   width: 100%;
   height: 168px;
   opacity: 0;
+  overflow: hidden;
 }
 .viewport2 {
   width: 816px;
@@ -781,3 +829,17 @@ h3{
   top: 50%;
   left: 50%;
 }
+
+
+
+
+
+
+/*==============================end==================================*/
+
+/*.end{
+  background: white;
+  height: 100vh;
+  width: 100vw;
+  z-index: 100000;
+}*/
